# lume

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
agent/: package.json
agent/src/: index.ts  providers.ts  router.ts  skill-evaluator.ts  tools.ts
bot-gateway/: package.json
bot-gateway/adapters/: dingtalk.ts  feishu.ts  telegram.ts
bot-gateway/src/: index.ts
docs/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh-CN.md  README.zh-TW.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  memory.rs  oauth.rs  session.rs  sidecar.rs  skills.rs
src/components/: ActionPreview.tsx  ChatView.tsx  HarnessPanel.tsx  MemoryPanel.tsx  OnboardingWizard.tsx  ResizeHandle.tsx  Settings.tsx  Sidebar.tsx  SkillBrowser.tsx  WorkspacePanel.tsx
src/lib/: providers.ts
src/stores/: appStore.ts
