[package]
name = "lume"
version = "0.1.0"
description = "Lume — illuminate your workflow with AI that grows with you"
authors = ["zionfly"]
edition = "2021"

[lib]
name = "lume_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
open = "5"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
pdf-extract = "0.7"
walkdir = "2"
